--- a/css/styles.css
+++ b/css/styles.css
@@ -9,6 +9,8 @@
 body {
   background-color: var(--white-color);
   color: var(--primary-text-color);
+  font-family: Roboto, sans-serif;
+  letter-spacing: 0.03em;
 }
 
 /*для скрятия маркеров*/
@@ -23,7 +25,11 @@ body {
 /*логотип*/
 .logo {
   color: #000000;
+  font-family: Raleway;
+  font-size: 26px;
+  line-height: 1.19;
 }
+
 .logo span {
   color: var(--accent-color);
 }
@@ -31,63 +37,108 @@ body {
 /*навигация*/
 .site-nav a {
   color: var(--title-text-color);
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.02em;
 }
 .site-nav a:hover,
 .site-nav a:focus {
   color: var(--accent-color);
 }
 
+.site-nav .link.current {
+  color: var(--accent-color);
+}
 /*контакты*/
 .contacts a {
   color: var(--primary-text-color);
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.4;
+  letter-spacing: 0.02em;
 }
 .contacts a:hover,
 .contacts a:focus {
   color: var(--accent-color);
 }
 
-.hero {
-  background-color: var(--section-color);
-}
+/*index.html*/
 /*hero*/
 .hero-title {
   color: var(--white-color);
+  background-color: var(--section-color);
+  font-weight: 900;
+  font-size: 44px;
+  line-height: 1.36;
+
+  text-align: center;
+  letter-spacing: 0.06em;
+  text-transform: uppercase;
 }
 
 .hero-button {
   background-color: var(--accent-color);
   color: var(--white-color);
+  cursor: pointer;
+  font-weight: bold;
+  font-size: 16px;
+  line-height: 1.88;
+
+  display: flex;
+  align-items: center;
+  text-align: center;
+  letter-spacing: 0.06em;
 }
 
 /*Особенности*/
-.section-subtitle {
+.feature {
   color: var(--title-text-color);
+  font-weight: bold;
+  font-size: 14px;
+  line-height: 1.14;
+  text-transform: uppercase;
 }
 
-/*чем мы занимаемся*/
+.feature-text {
+  font-size: 14px;
+  line-height: 1.71;
+}
+
+/*чем мы занимаемся & наша команда*/
 .section-title {
   color: var(--title-text-color);
+  font-weight: bold;
+  font-size: 36px;
+  line-height: 1.16;
+
+  text-align: center;
 }
 
 /*наша команда*/
-.section-icon {
-  background-color: #f5f4fa;
-}
 .section-avatar {
   color: var(--title-text-color);
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.19;
+
+  text-align: center;
 }
 
-.icon {
-  background-color: ;
+.icon-text {
+  font-size: 16px;
+  line-height: 1.19;
+
+  text-align: center;
 }
 
 /*footer*/
-.footer {
-  background-color: var(--section-color);
-}
-
 .logo-footer {
   color: var(--white-color);
+  background-color: var(--section-color);
+  font-family: Raleway;
+  font-size: 26px;
+  line-height: 1.19;
 }
 
 .logo-footer span {
@@ -96,10 +147,16 @@ body {
 
 .footer-addres {
   color: var(--white-color);
+  background-color: var(--section-color);
+  font-size: 14px;
+  line-height: 1.71;
 }
 
 .footer-contacts {
   color: rgba(255, 255, 255, 0.6);
+  background-color: var(--section-color);
+  font-size: 14px;
+  line-height: 1.71;
 }
 
 .footer-contacts:hover,
@@ -112,6 +169,13 @@ body {
 .btn {
   background-color: #f5f4fa;
   color: var(--title-text-color);
+  cursor: pointer;
+  font-family: inherit;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.62;
+
+  text-align: center;
 }
 
 .btn:hover,
@@ -121,6 +185,16 @@ body {
 }
 
 /*галлерея фото*/
-.section-items {
+.portfolio-items {
   color: var(--title-text-color);
+  font-weight: bold;
+  font-size: 18px;
+  line-height: 2;
+
+  letter-spacing: 0.06em;
+}
+
+.portfolio-text {
+  font-size: 16px;
+  line-height: 1.87;
 }
