--- a/css/styles.css
+++ b/css/styles.css
@@ -10,10 +10,9 @@ body {
   background-color: var(--white-color);
   color: var(--primary-text-color);
   font-family: Roboto, sans-serif;
-  letter-spacing: 0.03em;
 }
 
-/*для скрятия маркеров*/
+/*для скрытия маркеров*/
 .list {
   list-style: none;
 }
@@ -28,6 +27,7 @@ body {
   font-family: Raleway;
   font-size: 26px;
   line-height: 1.19;
+  letter-spacing: 0.03em;
 }
 
 .logo span {
@@ -81,7 +81,7 @@ body {
   background-color: var(--accent-color);
   color: var(--white-color);
   cursor: pointer;
-  font-weight: bold;
+  font-weight: 700;
   font-size: 16px;
   line-height: 1.88;
 
@@ -94,24 +94,26 @@ body {
 /*Особенности*/
 .feature {
   color: var(--title-text-color);
-  font-weight: bold;
+  font-weight: 700;
   font-size: 14px;
   line-height: 1.14;
+  letter-spacing: 0.03em;
   text-transform: uppercase;
 }
 
 .feature-text {
   font-size: 14px;
   line-height: 1.71;
+  letter-spacing: 0.03em;
 }
 
 /*чем мы занимаемся & наша команда*/
 .section-title {
   color: var(--title-text-color);
-  font-weight: bold;
+  font-weight: 700;
   font-size: 36px;
   line-height: 1.16;
-
+  letter-spacing: 0.03em;
   text-align: center;
 }
 
@@ -121,6 +123,7 @@ body {
   font-weight: 500;
   font-size: 16px;
   line-height: 1.19;
+  letter-spacing: 0.03em;
 
   text-align: center;
 }
@@ -128,6 +131,7 @@ body {
 .icon-text {
   font-size: 16px;
   line-height: 1.19;
+  letter-spacing: 0.03em;
 
   text-align: center;
 }
@@ -139,6 +143,7 @@ body {
   font-family: Raleway;
   font-size: 26px;
   line-height: 1.19;
+  letter-spacing: 0.03em;
 }
 
 .logo-footer span {
@@ -146,17 +151,21 @@ body {
 }
 
 .footer-addres {
+  font-style: normal;
   color: var(--white-color);
   background-color: var(--section-color);
   font-size: 14px;
   line-height: 1.71;
+  letter-spacing: 0.03em;
 }
 
 .footer-contacts {
+  font-style: normal;
   color: rgba(255, 255, 255, 0.6);
   background-color: var(--section-color);
   font-size: 14px;
   line-height: 1.71;
+  letter-spacing: 0.03em;
 }
 
 .footer-contacts:hover,
@@ -174,6 +183,7 @@ body {
   font-weight: 500;
   font-size: 16px;
   line-height: 1.62;
+  letter-spacing: 0.03em;
 
   text-align: center;
 }
@@ -187,7 +197,7 @@ body {
 /*галлерея фото*/
 .portfolio-items {
   color: var(--title-text-color);
-  font-weight: bold;
+  font-weight: 700;
   font-size: 18px;
   line-height: 2;
 
@@ -197,4 +207,5 @@ body {
 .portfolio-text {
   font-size: 16px;
   line-height: 1.87;
+  letter-spacing: 0.03em;
 }
