--- a/css/styles.css
+++ b/css/styles.css
@@ -91,6 +91,11 @@ body {
   letter-spacing: 0.06em;
 }
 
+.hero-button:hover,
+.hero-button:focus {
+  background-color: #188ce8;
+}
+
 /*Особенности*/
 .feature {
   color: var(--title-text-color);
